@@ -82,6 +82,8 @@ class FeedMapper extends Mapper implements IMapper {
 	public function findAllFromUser($userId){
 		$sql = 'SELECT `feeds`.*, COUNT(`items`.`id`) AS `unread_count` ' .
 			'FROM `*PREFIX*news_feeds` `feeds` ' .
+			'LEFT OUTER JOIN `*PREFIX*news_folders` `folders` '.
+				'ON `feeds`.`folder_id` = `folders`.`id` ' .
 			'LEFT JOIN `*PREFIX*news_items` `items` ' .
 				'ON `feeds`.`id` = `items`.`feed_id` ' .
 				// WARNING: this is a desperate attempt at making this query work
@@ -91,6 +93,9 @@ class FeedMapper extends Mapper implements IMapper {
 				'AND (`items`.`status` & ' . StatusFlag::UNREAD . ') = ' .
 				StatusFlag::UNREAD . ' ' .
 			'WHERE `feeds`.`user_id` = ? ' .
+			'AND (`feeds`.`folder_id` = 0 ' .
+				'OR `folders`.`deleted_at` = 0' .
+			')' .
 			'AND `feeds`.`deleted_at` = 0 ' .
 			'GROUP BY `feeds`.`id`, `feeds`.`user_id`, `feeds`.`url_hash`,'.
 				'`feeds`.`url`, `feeds`.`title`, `feeds`.`link`,'.
