@@ -150,16 +150,25 @@ class FeedMapperTest extends \OCA\AppFramework\Utility\MapperTestUtility {
 		);
 		$sql = 'SELECT `feeds`.*, COUNT(`items`.`id`) AS `unread_count` ' .
 			'FROM `*PREFIX*news_feeds` `feeds` ' .
+			'LEFT OUTER JOIN `*PREFIX*news_folders` `folders` '.
+				'ON `feeds`.`folder_id` = `folders`.`id` ' .
 			'LEFT JOIN `*PREFIX*news_items` `items` ' .
-				'ON `feeds`.`id` = `items`.`feed_id` ' . 
-				'AND (`items`.`status` & ' . StatusFlag::UNREAD . ') = ' . 
+				'ON `feeds`.`id` = `items`.`feed_id` ' .
+				// WARNING: this is a desperate attempt at making this query work
+				// because prepared statements dont work. This is a possible 
+				// SQL INJECTION RISK WHEN MODIFIED WITHOUT THOUGHT.
+				// think twice when changing this 
+				'AND (`items`.`status` & ' . StatusFlag::UNREAD . ') = ' .
 				StatusFlag::UNREAD . ' ' .
 			'WHERE `feeds`.`user_id` = ? ' .
+			'AND (`feeds`.`folder_id` = 0 ' .
+				'OR `folders`.`deleted_at` = 0' .
+			')' .
 			'AND `feeds`.`deleted_at` = 0 ' .
-		      	'GROUP BY `feeds`.`id`, `feeds`.`user_id`, `feeds`.`url_hash`,'.
-		        	'`feeds`.`url`, `feeds`.`title`, `feeds`.`link`,'.
-		        	'`feeds`.`favicon_link`, `feeds`.`added`,'.
-		        	'`feeds`.`folder_id`, `feeds`.`prevent_update`, `feeds`.`deleted_at`';
+			'GROUP BY `feeds`.`id`, `feeds`.`user_id`, `feeds`.`url_hash`,'.
+				'`feeds`.`url`, `feeds`.`title`, `feeds`.`link`,'.
+				'`feeds`.`favicon_link`, `feeds`.`added`,'.
+				'`feeds`.`folder_id`, `feeds`.`prevent_update`, `feeds`.`deleted_at`';
 		$this->setMapperResult($sql, 
 			array($userId), $rows);
 		
