@@ -1,6 +1,7 @@
 ownCloud-news (0.102)
 * Fix marking read of all articles and folders on mysql and postgres
 * Fix bug that would still show items after its feed or folder has been marked as deleted
+* Fix bug that would show invalid unread count for feeds whose folders were deleted
 
 ownCloud-news (0.101)
 
